fix: z-index popup & burger

--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -2,7 +2,7 @@
 	position: sticky;
 	left: 0;
 	top: 0;
-	z-index: 10000;
+	z-index: 1001;
 
 	// .header__content
 
